syntax = "proto3";

package main;

option go_package = "proto/proto;gacha";

service GachaService {
  rpc Draw (DrawRequest) returns (DrawResponse);
  rpc GetGachaInfo (GachaRequest) returns (GachaResponse);
}

message DrawRequest {
  string userId = 1;
}

message DrawResponse {
  string itemName = 1;
  string rarity = 2;
}

message GachaRequest {
  string gachaType = 1;
}

message GachaResponse {
  string gachaCateg = 1;
  string remaining = 2;
  string startDate = 3;
  string endDate = 4;
  string ownerUserId = 5;
}
